# Bread-Math

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
demo/: InertiaTensor.cpp  Main.cpp  MatrixTesting.cpp  MemoryTesting.cpp  Quaternion.cpp  RaylibTesting.cpp  TransformInverse.cpp  TypeConversion.cpp  Types.cpp  VectorTesting.cpp  VectorTransformation.cpp
include/bMath/: Geometry.hpp  Matrix.hpp  Quaternion.hpp  Vector.hpp  bMath.hpp  float.hpp  functions.hpp  fwd.hpp  geometry.hpp  matrix.hpp  physics.hpp  quaternion.hpp  vector.hpp
include/bMath/ext/: iostream.hpp  raylib.hpp
src/: Vector.cpp
